content/compile_output.txt
In file included from ./entities/../haven.cpp:347:
In file included from ./gryphkiss.cpp:18:
./entities/reflectionProbe.cpp:14:25: error: no viable overloaded '='
    self->targetTexture = CreateTextureTarget(512, 512);
    ~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./haven_platform.h:378:9: note: candidate function (the implicit copy assignment operator) not viable: no known conversion from 'Texture *' to 'const Texture' for 1st argument; dereference the argument with *
typedef struct 
        ^
./haven_platform.h:378:9: note: candidate function (the implicit move assignment operator) not viable: no known conversion from 'Texture *' to 'Texture' for 1st argument; dereference the argument with *
typedef struct 
        ^
In file included from ./entities/../haven.cpp:347:
In file included from ./gryphkiss.cpp:18:
./entities/reflectionProbe.cpp:21:5: error: no matching function for call to 'SetRenderTarget'
    SetRenderTarget(self->targetTexture);
    ^~~~~~~~~~~~~~~
./entities/../haven.cpp:265:6: note: candidate function not viable: no known conversion from 'Texture' to 'Texture *' for 1st argument; take the address of the argument with &
void SetRenderTarget(Texture* target)
     ^
In file included from ./entities/../haven.cpp:347:
In file included from ./gryphkiss.cpp:18:
./entities/reflectionProbe.cpp:28:38: error: assigning to 'Texture *' from incompatible type 'Texture'; take the address with &
    waterPlane->ColorTexture = self->targetTexture;// haven->waterRipplesCurrent;
                               ~~~~~~^~~~~~~~~~~~~
                               &
3 errors generated.
